app/assets/stylesheets/header.scss
.app-header {
  width: 100%;
  padding: $small-spacing;
  background: $secondary-background-color;
  a {
    color: $blue;
    &:hover,
    &:active {
      color: $dark-blue;
    }
  }
  .button {
    color: #fff;
    padding: $small-spacing/2 $small-spacing;
    &:hover,
    &:active {
      color: $light-gray;
    }
  }
}
.app-header-fixed {
  position: fixed;
  top: 0;
  z-index: 100;
  box-shadow: 0 2px 5px $medium-gray;
  transition: all ease 0.5s;
}
.home-link {
  float: left;
  font-family: $brand-font-family;
  font-size: 1.25rem;
  margin: 0;
}
.app-header-home {
  .home-link {
    display: none;
  }
}


nav {
  float: right;
}

.main-menu {
  li {
    display: inline;
    margin: 0 $small-spacing;
    i {
      font-size: 1.3em;
    }
    span {
      display: none;
    }
    button {
      display: inline;
      color: #fff;
    }
  }
}

@media (min-width: 650px) {
  .main-menu li span {
    display: initial;
  }
}

